kubernetes/apps/default/mosquitto/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: default
  labels:
    app.kubernetes.io/name: mosquitto
    app.kubernetes.io/instance: mosquitto
    app.kubernetes.io/controller: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mosquitto
      app.kubernetes.io/instance: mosquitto
      app.kubernetes.io/controller: mosquitto
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mosquitto
        app.kubernetes.io/instance: mosquitto
        app.kubernetes.io/controller: mosquitto
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: app
          image: public.ecr.aws/docker/library/eclipse-mosquitto:2.0.22
          ports:
            - name: http
              containerPort: 1883
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 1000m
              memory: 100Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config-file
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: config
              mountPath: /config
      volumes:
        - name: config-file
          configMap:
            name: mosquitto
        - name: config
          persistentVolumeClaim:
            claimName: mosquitto-cache
