kubernetes/apps/default/mosquitto/app/tcproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: mosquitto-mqtt
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: mqtt-tcp
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
  hostname: ["mqtt.unscfleet.com"]
